k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meditriage-prod
  labels:
    name: meditriage-prod
    environment: production
